More work on replicating doxygen documentation

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -19,6 +19,7 @@
 # Set the Doxygen configuration file. In the Doxyfile.in file, there are some
 # placeholders that are replaced by CMake. That is also the reason for the
 # extension `.in`. For details see below for the command `configure_file`.
+find_package(Doxygen REQUIRED)
 set(DOXYGEN_CONFIG_FILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
 
 # Set the input directories for doxygen, i.e., all files that contain source
@@ -38,10 +39,10 @@ set(DOXYGEN_INPUT_DIRS
     ${DOXYGEN_INPUT_DIRS}
     ${CMAKE_CURRENT_SOURCE_DIR}/index.md
     ${CMAKE_CURRENT_SOURCE_DIR}/faq.md
-    ${CMAKE_CURRENT_SOURCE_DIR}/support.md
-    ${CMAKE_CURRENT_SOURCE_DIR}/rationale.md
-    ${CMAKE_CURRENT_SOURCE_DIR}/examples.md
-    ${CMAKE_CURRENT_SOURCE_DIR}/templates.md
+    #${CMAKE_CURRENT_SOURCE_DIR}/support.md
+    #${CMAKE_CURRENT_SOURCE_DIR}/rationale.md
+    #${CMAKE_CURRENT_SOURCE_DIR}/examples.md
+    #${CMAKE_CURRENT_SOURCE_DIR}/templates.md
     ${CMAKE_CURRENT_SOURCE_DIR}/guide.md)
 # By default the files are separated by a semicolon. This is not what Doxygen
 # wants, so we replace it with a space.
@@ -51,7 +52,7 @@ string(REPLACE ";" " " DOXYGEN_INPUT_DIRS "${DOXYGEN_INPUT_DIRS}")
 # can be included with the `\include`or `\snippet` command, we need to add the
 # directories where these files are located.
 set(DOXYGEN_EXAMPLE_DIRS
-    ${PROJECT_SOURCE_DIR}/examples ${PROJECT_SOURCE_DIR}/.github
+    #${PROJECT_SOURCE_DIR}/examples ${PROJECT_SOURCE_DIR}/.github
     ${PROJECT_SOURCE_DIR}/README.md)
 # Again, replace the semicolon with a space such that Doxygen can handle it.
 string(REPLACE ";" " " DOXYGEN_EXAMPLE_DIRS "${DOXYGEN_EXAMPLE_DIRS}")
@@ -80,6 +81,8 @@ set(PROJECT_LOGO "mqss_logo.svg")
 # DOXYGEN_INPUT_DIRS.
 configure_file(${DOXYGEN_CONFIG_FILE_IN} ${DOXYGEN_CONFIG_FILE_OUT} @ONLY)
 
+message(STATUS "Doxygen input files: ${DOXYGEN_INPUT_FILES}")
+
 # Create a custom command to run Doxygen
 add_custom_command(
   OUTPUT ${DOXYGEN_OUTPUT_DIR}/html/index.html
@@ -89,11 +92,11 @@ add_custom_command(
           ${CMAKE_CURRENT_SOURCE_DIR}/layout.xml
           ${CMAKE_CURRENT_SOURCE_DIR}/style.css
           ${CMAKE_SOURCE_DIR}/README.md
-          ${CMAKE_SOURCE_DIR}/.github/support.md
+          #${CMAKE_SOURCE_DIR}/.github/support.md
   COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_CONFIG_FILE_OUT}
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
   COMMENT "Generating API documentation with Doxygen"
   VERBATIM)
 
 # Create a custom target
-add_custom_target(mlir_passes_docs ALL DEPENDS ${DOXYGEN_OUTPUT_DIR}/html/index.html)
+add_custom_target(generate_docs ALL DEPENDS ${DOXYGEN_OUTPUT_DIR}/html/index.html)
