Including MLIRTransforms that is useful for MLIR transformation passes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,6 +239,7 @@ add_mlir_library(MQSSPasses SHARED
     MQT::QMapSCHeuristic
     MLIRIR
     MLIRPass
+    MLIRTransforms
     #qdmi
     #qinfo
 )
