adding sections cudaq-decompositions.md and cudaq-transpiler.md

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -39,6 +39,8 @@ set(DOXYGEN_INPUT_DIRS
     ${DOXYGEN_INPUT_DIRS}
     ${CMAKE_CURRENT_SOURCE_DIR}/index.md
     ${CMAKE_CURRENT_SOURCE_DIR}/faq.md
+    ${CMAKE_CURRENT_SOURCE_DIR}/cudaq-decompositions.md
+    ${CMAKE_CURRENT_SOURCE_DIR}/cudaq-transpiler.md
     ${CMAKE_CURRENT_SOURCE_DIR}/templates.md
     ${CMAKE_CURRENT_SOURCE_DIR}/tests.md
     ${CMAKE_CURRENT_SOURCE_DIR}/guide.md)
