--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -42,7 +42,7 @@ set(DOXYGEN_INPUT_DIRS
     ${CMAKE_CURRENT_SOURCE_DIR}/cudaq-decompositions.md
     ${CMAKE_CURRENT_SOURCE_DIR}/cudaq-transpiler.md
     ${CMAKE_CURRENT_SOURCE_DIR}/templates.md
-    ${CMAKE_CURRENT_SOURCE_DIR}/tests.md
+    #${CMAKE_CURRENT_SOURCE_DIR}/tests.md
     ${CMAKE_CURRENT_SOURCE_DIR}/guide.md)
 # By default the files are separated by a semicolon. This is not what Doxygen
 # wants, so we replace it with a space.
