Copying the qasm files in make target

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -59,3 +59,8 @@ set(TEST_OUTPUT_DIR $<TARGET_FILE_DIR:test-mqss-passes>/code)
 add_custom_target(copy-code-test ALL
     COMMAND ${CMAKE_COMMAND} -E copy_directory
     ${CMAKE_SOURCE_DIR}/tests/code ${TEST_OUTPUT_DIR})
+
+set(TEST_OUTPUT_DIR $<TARGET_FILE_DIR:test-mqss-passes>/qasm)
+add_custom_target(copy-qasm-test ALL
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_SOURCE_DIR}/tests/qasm ${TEST_OUTPUT_DIR})
