Reordering files, better organization now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -222,6 +222,8 @@ message(STATUS "QINFO INCLUDE DIRS ${qinfo_INCLUDE_DIRS}")
 include_directories(BEFORE
         ${CMAKE_SOURCE_DIR}/include
         ${CMAKE_SOURCE_DIR}/include/Passes/
+        ${CMAKE_SOURCE_DIR}/include/Support/
+        ${CMAKE_SOURCE_DIR}/include/Support/CodeGen/
         ${MQT_QMAP_INCLUDE_DIR}
         ${MQT_CORE_INCLUDE_DIR}
         ${qdmi_INCLUDE_DIRS}
@@ -233,31 +235,22 @@ file(GLOB SRC_CODEGEN "${CMAKE_CURRENT_SOURCE_DIR}/lib/Passes/CodeGen/*.cpp")
 file(GLOB SRC_DECOMPO "${CMAKE_CURRENT_SOURCE_DIR}/lib/Passes/Decompositions/*.cpp")
 file(GLOB SRC_EXAMPLE "${CMAKE_CURRENT_SOURCE_DIR}/lib/Passes/Examples/*.cpp")
 file(GLOB SRC_TRANSFO "${CMAKE_CURRENT_SOURCE_DIR}/lib/Passes/Transforms/*.cpp")
+file(GLOB SRC_SUP_QUA "${CMAKE_CURRENT_SOURCE_DIR}/lib/Support/CodeGen/Quake/*.cpp")
 
-add_mlir_library(MQSSPassesCodeGen SHARED
+add_mlir_library(SupportQuake SHARED
+    ${SRC_SUP_QUA}
+    LINK_LIBS PUBLIC
+    MLIRIR
+    MLIRPass
+    MLIRTransforms)
+
+add_mlir_library(MQSSPasses SHARED
     ${SRC_CODEGEN}
-    LINK_LIBS PUBLIC
-    MLIRIR
-    MLIRPass
-    MLIRTransforms)
-
-add_mlir_library(MQSSPassesDecompositions SHARED
     ${SRC_DECOMPO}
-    LINK_LIBS PUBLIC
-    MLIRIR
-    MLIRPass
-    MLIRTransforms)
-
-add_mlir_library(MQSSPassesExamples SHARED
     ${SRC_EXAMPLE}
-    LINK_LIBS PUBLIC
-    MLIRIR
-    MLIRPass
-    MLIRTransforms)
-
-add_mlir_library(MQSSPassesTransforms SHARED
     ${SRC_TRANSFO}
     LINK_LIBS PUBLIC
+    SupportQuake
     MQT::CoreIR
     MQT::CoreNA
     MQT::QMapSC
