including libraries to support zip files

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,6 +8,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-switch")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -frtti -fexceptions")
 # Add Google Test
 find_package(GTest REQUIRED)
+
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(LIBZIP REQUIRED libzip)
+
 include_directories(${GTEST_INCLUDE_DIRS})
 include_directories(${MLIR_INCLUDE_DIRS})
 
@@ -64,8 +68,10 @@ target_include_directories(test-verification-qcec PRIVATE
 add_executable(test-qasm-parser testQASMParser.cpp)
 target_link_libraries(test-qasm-parser PRIVATE
                                           ${COMMON_LIBRARIES}
+                                          ${LIBZIP_LIBRARIES}
                                           MQSSPasses)
 target_include_directories(test-qasm-parser PRIVATE
+    ${LIBZIP_INCLUDE_DIRS}
     ${CMAKE_SOURCE_DIR}/include
     ${CMAKE_SOURCE_DIR}/include/Passes/
     ${CMAKE_SOURCE_DIR}/include/Support/
