--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -69,6 +69,7 @@ add_executable(test-qasm-parser testQASMParser.cpp)
 target_link_libraries(test-qasm-parser PRIVATE
                                           ${COMMON_LIBRARIES}
                                           ${LIBZIP_LIBRARIES}
+                                          MQT::QCEC
                                           MQSSPasses)
 target_include_directories(test-qasm-parser PRIVATE
     ${LIBZIP_INCLUDE_DIRS}
@@ -76,6 +77,7 @@ target_include_directories(test-qasm-parser PRIVATE
     ${CMAKE_SOURCE_DIR}/include/Passes/
     ${CMAKE_SOURCE_DIR}/include/Support/
     ${CMAKE_SOURCE_DIR}/include/Support/CodeGen
+    ${MQT_QCEC_INCLUDE_DIR}
     ${CUDAQ_MLIR_RUNTIME_PATH})
 
 set(TEST_OUTPUT_DIR $<TARGET_FILE_DIR:test-mqss-passes>/golden-cases)
