--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -66,11 +66,14 @@ target_include_directories(test-verification-qcec PRIVATE
     ${CUDAQ_MLIR_RUNTIME_PATH})
 
 add_executable(test-qasm-parser testQASMParser.cpp)
+#target_compile_options(test-qasm-parser PRIVATE -fsanitize=address -g -O1 -fno-omit-frame-pointer)
+#sanitize is useful when struggling with memory problems
 target_link_libraries(test-qasm-parser PRIVATE
                                           ${COMMON_LIBRARIES}
                                           ${LIBZIP_LIBRARIES}
                                           MQT::QCEC
                                           MQSSPasses)
+                                         #-fsanitize=address) # sanitize is useful when struggling with memory problems
 target_include_directories(test-qasm-parser PRIVATE
     ${LIBZIP_INCLUDE_DIRS}
     ${CMAKE_SOURCE_DIR}/include
