The cmake configuration, now installs the tools in the install-destination/bin. TODO: At the moment the tool to lower to tikz is valid with qke (QUAKE) files. The option to pass *.cpp as input may fail if the cudaq compiler is not installed. Look for an alternative to synth the quake code from c++.

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -33,6 +33,9 @@ target_link_libraries(quake-to-tikz PRIVATE
 target_include_directories(quake-to-tikz PRIVATE
     ${CMAKE_SOURCE_DIR}/include
     ${CUDAQ_MLIR_RUNTIME_PATH})
+set_target_properties(quake-to-tikz PROPERTIES
+    INSTALL_RPATH "$ORIGIN/../lib"
+    BUILD_WITH_INSTALL_RPATH ON)
 
 add_executable(qasm-to-quake qasm-to-quake.cpp)
 target_link_libraries(qasm-to-quake PRIVATE
@@ -42,3 +45,20 @@ target_link_libraries(qasm-to-quake PRIVATE
 target_include_directories(qasm-to-quake PRIVATE
     ${CMAKE_SOURCE_DIR}/include
     ${CUDAQ_MLIR_RUNTIME_PATH})
+set_target_properties(qasm-to-quake PROPERTIES
+    INSTALL_RPATH "$ORIGIN/../lib"
+    BUILD_WITH_INSTALL_RPATH ON)
+
+
+
+
+
+
+# Install the quake-to-tikz tool
+install(TARGETS quake-to-tikz
+        RUNTIME DESTINATION bin)
+
+# Install the qasm-to-quake tool
+install(TARGETS qasm-to-quake
+        RUNTIME DESTINATION bin)
+
