--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,11 +6,10 @@
 #
 #     pre-commit install
 #
-
 ci:
   autoupdate_commit_msg: "⬆️🪝 update pre-commit hooks"
   autofix_commit_msg: "🎨 pre-commit fixes"
-
+stages: [commit]
 repos:
   # Standard hooks
   - repo: https://github.com/pre-commit/pre-commit-hooks
